--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        
-    </head>
-    <Body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - live </title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="https://github.com/yourusername">GitHub</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to My GitHub Profile!</h1>
+        <img src="images/profile-picture.jpg" alt="Profile Picture">
+        <p>Hi, I'm live, a student passionate about ... </p>
+    </header>
 
-    </Body>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am currently studying MSc in Informatics at University.</p>
+    </section>
+
+    
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>You can reach me via <a href="live@gmail.com">email</a> or find me on <a href="https://linkedin.com/in/...">LinkedIn</a>.</p>
+    </section>
+
+    <footer>
+        <p>Thank you for visiting my profile!</p>
+    </footer>
+
+    <script src="js/script.js"></script> 
+</body>
 </html>
